--- a/file.Rmd
+++ b/file.Rmd
@@ -10,3 +10,15 @@ library(dplyr)
 library(ggplot2)
 ```
 
+```{r}
+.libPaths()
+```
+
+```{r}
+renv:: init()
+```
+
+```{r}
+renv :: snapshot()
+```
+
